--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -91,6 +91,7 @@
         .blog-image {
             width: 100%;
             border-radius: 10px;
+            height: 500px;
             overflow: hidden;
             margin: 2rem 0;
             box-shadow: 0 5px 15px rgba(0,0,0,0.1);
@@ -100,6 +101,7 @@
             width: 100%;
             height: auto;
             display: block;
+
         }
         
         .blog-content {
