--- a/public/css/style.css
+++ b/public/css/style.css
@@ -522,8 +522,18 @@
       flex: 0 0 300px;
     }
     
-    .info-block{
+    .listing-info-grid{
       
+      display: flex;
+      flex-direction: column;
+    }
+
+    .listing-description{
+      width: 100%;
+    }
+
+    .full-width{
+      width: 60% !important;
     }
 
   }
