--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -297,6 +297,9 @@
             color: var(--dark);
             margin-bottom: 1rem;
             line-height: 1.3;
+            width: 100%;
+      
+            overflow: hidden;
         }
         
         .news-excerpt {
