--- a/public/css/app.css
+++ b/public/css/app.css
@@ -305,7 +305,7 @@ padding-left: 2vw;
 
 .property-image img {
   width: 100% !important;
-  height: 100%;
+  height: 250px;
   object-fit: cover;
 }
 
