--- a/resources/views/about/index.antlers.html
+++ b/resources/views/about/index.antlers.html
@@ -21,7 +21,7 @@
         
         <div class="video-container">
             <video class="video" autoplay muted loop>
-                <!-- <source src="assets/img_0481-3.mp4" type="video/mp4"> -->
+                <source src="https://armonie-imobiliare.com/wp-content/uploads/2024/09/img_0481-3.mp4" type="video/mp4">
                 Ваш браузер не поддерживает видео тег.
             </video>
         </div>
